<resources>
    <string name="app_name">Photo Library: Albums</string>
    <string name="title_activity_add_edit_album">AddEditAlbums</string>
    <string name="title_activity_add_edit_photos">AddEditPhotos</string>
    <string name="title_activity_photo_list_view">PhotoListView</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>]
    <string name="cancel">Cancel</string>
    <string name="caption">Caption</string>
    <string name="imageviewdesc">ImageViewDesc</string>
    <string name="open">Open</string>
    <string name="name_of_album">Name of Album</string>
    <string name="location_tag">Location Tag</string>
    <string name="person_tag">Person Tag</string>
    <string name="title_activity_slideshow">Slideshow</string>
    <string name="next">Next</string>
    <string name="placeholder">placeholder</string>
    <string name="previous">Previous</string>
    <string name="exit">Exit</string>
    <string name="title_activity_search">Search</string>
    <string name="move">Move</string>
    <string name="title_activity_move_photo">MovePhoto</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="title_activity_advance_search">AdvanceSearch</string>
</resources>
