<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

    <!--  Image View Display -->
    <TextView
            android:text="@string/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/ssCaption"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/ssImageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="105dp"/>
    <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@color/colorBtnText"
            android:id="@+id/nextBtn"
            android:onClick="nextBtnAction" android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/ssImageView"/>
    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@color/colorAccent"
            android:id="@+id/ssImageView"
            android:contentDescription="@string/imageviewdesc" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="52dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="105dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="106dp" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@color/colorBtnText"
            android:id="@+id/prevBtn"
            android:onClick="prevBtnAction" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/ssImageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>