<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="?attr/actionBarSize"
              android:padding="20dp">

    <!--  Name label -->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/name_of_album"
    />
    <!-- Name field -->
    <EditText
            android:id="@+id/album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:inputType="text"
            android:maxLines="1"
    />
    <!--  Buttons for save and cancel -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:id="@+id/album_open"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorBtnText"
                android:onClick="open"
                android:text="@string/open"
                android:textSize="16sp" android:layout_marginTop="56dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/album_save"
                android:layout_marginEnd="24dp"/>
        <Button
                android:id="@+id/album_delete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorBtnText"
                android:onClick="delete"
                android:text="@string/delete"
                android:textSize="16sp" android:layout_marginTop="56dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/album_cancel"
                android:layout_marginEnd="24dp"/>
        <Button
                android:id="@+id/album_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorBtnText"
                android:onClick="cancel"
                android:text="@string/cancel"
                android:textSize="16sp" android:layout_marginTop="56dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp"/>
        <Button
                android:id="@+id/album_save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorBtnText"
                android:onClick="save"
                android:text="@string/save"
                android:textSize="16sp" android:layout_marginTop="56dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/album_delete"
                android:layout_marginEnd="24dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>

